Added translate lib in requirements/common.in

--- a/requirements/common.in
+++ b/requirements/common.in
@@ -81,6 +81,9 @@ https://github.com/andersk/zoneinfo/archive/f9687abaea8453be1c8d0e21544bd557d65a
 
 # Needed for Redis
 redis
+# Translate.py used for translating messages to preferred_language
+
+translate
 
 # Tornado used for server->client push system
 tornado
